--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/YHGL/YHGL.cshtml
@@ -24,7 +24,7 @@
 
         </div>
         <div class="div_top_right">
-            <span class="span_top_right">
+            <span class="span_top_right" id="span_top_right_sy">
                 信息小镇首页
             </span>
             <span class="span_top_right_split"></span>
