--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Top.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Top.css
@@ -1,8 +1,6 @@
-﻿
-.div_top {
+﻿.div_top {
     width: 100%;
     height: 30px;
-    border-bottom: 1px solid #cccccc;
     vertical-align: middle;
     font-size: 12px;
     z-index: 1002; 
