--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Top.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/Common/Top.css
@@ -9,16 +9,15 @@
 
 .div_top_left {
     width: 400px;
-    margin-left: 100px;
     text-align: left;
     height: 25px;
     padding-top: 5px;
     float: left;
+    padding-left: 10px;
 }
 
 .div_top_right {
-    width: 360px;
-    margin-right: 12px;
+    padding-right: 10px;
     text-align: center;
     height: 25px;
     padding-top: 5px;
