--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/SY.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
 </head>
-<body style="width: 100%; height: 100%; overflow-x:hidden; background-color: #eeeff1;">
+<body>
     <div id="divTop" class="div_top">
         <div class="div_top_left">
             <span class="span_dqxzq" id="span_content_info_xzq">@ViewData["XZQ"]</span>
@@ -48,9 +48,32 @@
                     <input class="span_spaninput_in spaninput_fontcolor" id="SS" type="text" placeholder="找房子,找工作,找服务," />
                     <span class="span_ss">搜索</span>
                 </span>
+                <span class="span_head_right_ss">租房子</span>
+                <span class="span_head_right_ss">二手车</span>
+                <span class="span_head_right_ss">兼职</span>
+                <span class="span_head_right_ss">装修服务</span>
+                <span class="span_head_right_ss">旅游度假</span>
+                <span class="span_head_right_ss">居民搬家</span>
+                <span class="span_head_right_ss">演出表演</span>
+                <span class="span_head_right_ss">运动健身</span>
             </div>
             <span class="span_fbxx" id="span_fbxx">免费发布信息</span>
         </div>
+    </div>
+    <div id="divNav" class="div_head_nav">
+        <ul class="ul_head_nav">
+            <li id="li_head_sy" class="li_head_nav" style="width: 80px;"><span class="span_head_nav">首页</span></li>
+            <li id="li_head_xzapp" class="li_head_nav"><span class="span_head_nav">小镇APP</span><i class="i_head_nav"></i></li>
+            <li id="li_head_xzgzh" class="li_head_nav"><span class="span_head_nav">小镇公众号</span><i class="i_head_nav"></i></li>
+            <li id="li_head_xcx" class="li_head_nav"><span class="span_head_nav">小程序</span><i class="i_head_nav"></i></li>
+            <li id="li_head_xztm" class="li_head_nav"><span class="span_head_nav">小镇特卖</span></li>
+            <li id="li_head_xzjr" class="li_head_nav"><span class="span_head_nav">小镇金融</span></li>
+            <li id="li_head_xzgy" class="li_head_nav"><span class="span_head_nav">小镇公益</span></li>
+            <li id="li_head_xzfc" class="li_head_nav"><span class="span_head_nav">小镇房产</span></li>
+            <li id="li_head_xzesc" class="li_head_nav"><span class="span_head_nav">二手车</span></li>
+            <li id="li_head_xztg" class="li_head_nav"><span class="span_head_nav">小镇推广</span><i class="i_head_nav"></i></li>
+            <li id="li_head_viphy" class="li_head_nav"><span class="span_head_nav">VIP会员</span><i class="i_head_nav"></i></li>
+        </ul>
     </div>
 </body>
 </html>
