--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -21,7 +21,6 @@
             [<span class="span_qhcs" id="span_content_info_qhcs">切换城市</span>]
         </div>
         <div id="div_XZQ" class="div_dropdown">
-
         </div>
         <div class="div_top_right">
             <span class="span_top_right">
@@ -39,8 +38,7 @@
     </div>
     <div id="divHead" class="div_head">
         <div class="div_head_left">
-            <img class="img_head_left" src="@Url.Content("~/Areas/Business/Css/images/logo_blue.png")" />
-            <span class="span_head_left">infotownlet.com</span>
+            <img class="img_head_left_logo" src="@Url.Content("~/Areas/Business/Css/images/logo_blue.png")" />
         </div>
         <div class="div_head_right">
             <div class="div_head_right_ss">
@@ -74,6 +72,50 @@
             <li id="li_head_xztg" class="li_head_nav"><span class="span_head_nav">小镇推广</span><i class="i_head_nav"></i></li>
             <li id="li_head_viphy" class="li_head_nav"><span class="span_head_nav">VIP会员</span><i class="i_head_nav"></i></li>
         </ul>
+    </div>
+    <div id="div_Body" class="div_body">
+        <div class="div_body_top">
+            <div class="div_body_top_left">
+                <ul class="ul_body_top_left">
+                    <li class="li_body_top_left">
+                        <p class="p_body_top_left">
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_zp.png")" />
+                        </p>
+                        <p class="p_body_top_left">招聘</p>
+                        <p class="p_body_top_left">
+                            <span class="span_body_top_left">全职</span>
+                            <span class="span_body_top_left">/</span> 
+                            <span class="span_body_top_left">兼职</span>
+                        </p>
+                    </li>
+                    <li class="li_body_top_left">
+                        <p class="p_body_top_left">
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_esc.png")"/>
+                        </p>
+                        <p class="p_body_top_left">二手车</p>
+                        <p class="p_body_top_left">
+                            <span class="span_body_top_left">家用</span>
+                            <span class="span_body_top_left">/</span>
+                            <span class="span_body_top_left">商用</span>
+                        </p>
+                    </li>
+                    <li class="li_body_top_left">
+                        <p class="p_body_top_left">
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_fc.png")" />
+                        </p>
+                        <p class="p_body_top_left">房产</p>
+                        <p class="p_body_top_left">
+                            <span class="span_body_top_left">租房</span>
+                            <span class="span_body_top_left">/</span>
+                            <span class="span_body_top_left">买房</span>
+                        </p>
+                    </li>
+                </ul>
+            </div>
+            <div class="div_body_top_right">
+
+            </div>
+        </div>
     </div>
 </body>
 </html>
