--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY.css
@@ -1,241 +1,62 @@
-﻿body {
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-    background-color: #eeeff1;
-}
+﻿body {width: 100%;height: 100%;overflow-x: hidden;background-color: #eeeff1;}
 
-.div_head {
-    background-color: #ffffff;
-    width: 1200px;
-    height: 100px;
-    padding-top: 10px;
-}
+/*首页_头部*/
+.div_head {background-color: #ffffff;width: 1200px;height: 100px;padding-top: 10px;}
 
-.div_head_nav {
-    background-color: #ffffff;
-    width: 1200px;
-    height: 39px;
-}
+/*首页_头部_左侧*/
+.div_head_left {float: left;width: 120px;margin-top: 5px;}
+.div_head_left .img_head_left_logo {width: 100%;text-align: center;color: white;font-size: 25px;float: left;width: 155px;height: 55px;}
 
-.ul_head_nav {
-    height: 39px;
-    display: block;
-    padding: 0;
-    width: 100%;
-    border-bottom: 2px solid #5bc0de;
-}
+/*首页_头部_右侧*/
+.div_head_right {float: right;width: 1080px;margin-top: 5px;}
+.div_head_right .ul_head_right {width: 450px;height: 80px;display: block;float: left;margin-top: 20px;vertical-align: middle;}
+.div_head_right .ul_head_right .li_head_right {width: 130px;color: white;height: 40px;font-size: 16px;display: inline;margin-left: 30px;cursor: pointer;}
 
-.li_head_nav {
-    background: #ffffff;
-    text-align: center;
-    color: #5bc0de;
-    height: 37px;
-    font-size: 16px;
-    font-weight: 700;
-    float: left;
-    display: inline-block;
-    padding: 6px 20px;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    
-}
+/*首页_头部导航*/
+.div_head_nav {background-color: #ffffff;width: 1200px;height: 39px;}
+.div_head_nav .ul_head_nav {height: 39px;display: block;padding: 0;width: 100%;border-bottom: 2px solid #5bc0de;}
+.div_head_nav .ul_head_nav .li_head_nav {background: #ffffff;text-align: center;color: #5bc0de;height: 37px;font-size: 16px;font-weight: 700;float: left;display: inline-block;padding: 6px 20px;border-top-left-radius: 4px;border-top-right-radius: 4px;}
+.div_head_nav .ul_head_nav .li_head_nav .span_head_nav {cursor: pointer;}
+.div_head_nav .ul_head_nav .li_head_nav .i_head_nav {background-image: url(images/head_nav_down.png);display: inline-block;width: 14px;height: 14px;margin-left: 5px;}
 
-.span_head_nav {
-    cursor: pointer;
-}
+/*首页_主体_上部*/
+.div_body .div_body_top{ width: 100%;}
+.div_body .div_body_top .div_body_top_left{ width: 930px;height: 140px;margin-top: 10px;display: inline-block;float: left;background: #ffffff;padding: 10px 20px;}
+.div_body .div_body_top .div_body_top_right{ width: 260px;height: 140px;margin-top: 10px;margin-left: 10px;display: inline-block;float: left;background: #ffffff;}
+.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left{ width: 100px;float: left;}
+.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .i_body_top_left{ width: 44px;height: 44px;margin-left: 28px;text-align:center;display: block;background-size: 100%; }
+.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .p_body_top_left{display: block;text-align: center;}
+.div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .span_body_top_left{font-size: 12px;color: #999;display: inline-block;text-align: center;}
 
-.i_head_nav {
-    background-image: url(images/head_nav_down.png);
-    display: inline-block;
-    width: 14px;
-    height: 14px;
-    margin-left: 5px;
-}
 
-.div_head_left {
-    float: left;
-    width: 120px;
-    margin-top: 5px;
-}
+.div_bottom {border-top: 1px solid #cccccc;display: block;text-align: center;height: 100px;color: #333;padding-top: 15px;font-family: Microsoft YaHei, SimHei, Arial, Helvetica, sans-serif;margin-top: 20px;background-color: #000;opacity: 0.5;color: #fff;line-height: 34px;}
 
-.div_head_right {
-    float: right;
-    width: 1080px;
-    margin-top: 5px;
-}
+.span_div_bottom_inner {font-size: 14px;font-family: "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", tahoma, arial, simhei;}
 
-.img_head_left {
-    width: 100%;
-    text-align: center;
-    color: white;
-    font-size: 25px;
-    float: left;
-    width: 155px;
-    height: 55px;
-}
+.span_div_bottom_inner:hover {cursor: pointer;text-decoration: underline;}
 
-.span_head_left {
-    width: 100%;
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: white;
-    font-size: 17px;
-    float: left;
-    cursor: default;
-}
+.em_div_bottom_inner {width: 1px;background-color: #fff;height: 9px;margin: 2px 5px 0px 5px;display: inline-block;}
 
-.ul_head_right {
-    width: 450px;
-    height: 80px;
-    display: block;
-    float: left;
-    margin-top: 20px;
-    vertical-align: middle;
-}
+.span_fbxx {width: 90px;height: 34px;border: 1px solid #fff;float: right;display: inline-block;color: #fff;font-size: 16px;padding: 3px 12px;margin-top: 19px;cursor: pointer;}
 
-.li_head_right {
-    width: 130px;
-    color: white;
-    height: 40px;
-    font-size: 16px;
-    display: inline;
-    margin-left: 30px;
-    cursor: pointer;
-}
+.input_spaninput {width: 120px;margin-top: 1px;border: none;height: 30px;text-align: center;}
 
-.div_body_text {
-    width: 100%;
-    line-height: 28px;
-}
+.div_head_right_ss {display: inline-block;width: 600px;height: 80px;float: left;margin-left: 200px;}
 
-.div_bottom {
-    border-top: 1px solid #cccccc;
-    display: block;
-    text-align: center;
-    height: 100px;
-    color: #333;
-    padding-top: 15px;
-    font-family: Microsoft YaHei, SimHei, Arial, Helvetica, sans-serif;
-    margin-top: 20px;
-    background-color: #000;
-    opacity: 0.5;
-    color: #fff;
-    line-height: 34px;
-}
+.span_spaninput_out {border: none;display: block;width: 500px;height: 40px;font-size: 14px;margin-top: 10px;}
 
-.span_div_bottom_inner {
-    font-size: 14px;
-    font-family: "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", tahoma, arial, simhei;
-}
+.span_spaninput_in {border: 1px solid #5bc0de;display: inline-block;width: 410px;height: 40px;font-size: 14px;padding: 6px 12px;}
 
-    .span_div_bottom_inner:hover {
-        cursor: pointer;
-        text-decoration: underline;
-    }
+.spaninput_fontcolor {color: #333333;}
 
-.em_div_bottom_inner {
-    width: 1px;
-    background-color: #fff;
-    height: 9px;
-    margin: 2px 5px 0px 5px;
-    display: inline-block;
-}
+.span_head_right_ss {font-size: 12px;color: #999;cursor: pointer;margin-left: 4px;}
 
-.span_fbxx {
-    width: 90px;
-    height: 34px;
-    border: 1px solid #fff;
-    float: right;
-    display: inline-block;
-    color: #fff;
-    font-size: 16px;
-    padding: 3px 12px;
-    margin-top: 19px;
-    cursor: pointer;
-}
+.span_head_right_ss:hover {color: #ef6100;}
 
-.input_spaninput {
-    width: 120px;
-    margin-top: 1px;
-    border: none;
-    height: 30px;
-    text-align: center;
-}
+.span_ss {width: 90px;height: 40px;background: #5bc0de;float: right;display: inline-block;color: #fff;font-size: 16px;padding: 6px 26px;cursor: pointer;}
 
-.div_head_right_ss {
-    display: inline-block;
-    width: 600px;
-    height: 80px;
-    float: left;
-    margin-left: 200px;
-}
+.span_fbxx {width: 180px;border: 1px solid #5bc0de;height: 40px;background: #5bc0de;float: left;display: inline-block;color: #fff;font-size: 16px;padding-top: 6px;text-align: center;cursor: pointer;margin-top: 10px;margin-left: 10px;}
 
-.span_spaninput_out {
-    border: none;
-    display: block;
-    width: 500px;
-    height: 40px;
-    font-size: 14px;
-    margin-top: 10px;
-}
+.span_fbxx:hover {background: #31b0d5;}
 
-.span_spaninput_in {
-    border: 1px solid #5bc0de;
-    display: inline-block;
-    width: 410px;
-    height: 40px;
-    font-size: 14px;
-    padding: 6px 12px;
-}
-
-.spaninput_fontcolor {
-    color: #333333;
-}
-
-.span_head_right_ss {
-    font-size: 12px;
-    color: #999;
-    cursor: pointer;
-    margin-left: 4px;
-}
-
-    .span_head_right_ss:hover {
-        color: #ef6100;
-    }
-
-.span_ss {
-    width: 90px;
-    height: 40px;
-    background: #5bc0de;
-    float: right;
-    display: inline-block;
-    color: #fff;
-    font-size: 16px;
-    padding: 6px 26px;
-    cursor: pointer;
-}
-
-.span_fbxx {
-    width: 180px;
-    border: 1px solid #5bc0de;
-    height: 40px;
-    background: #5bc0de;
-    float: left;
-    display: inline-block;
-    color: #fff;
-    font-size: 16px;
-    padding-top: 6px;
-    text-align: center;
-    cursor: pointer;
-    margin-top: 10px;
-    margin-left: 10px;
-}
-
-    .span_fbxx:hover {
-        background: #31b0d5;
-    }
-
-:-ms-input-placeholder.span_spaninput_in {
-    color: #999;
-}
+:-ms-input-placeholder.span_spaninput_in {color: #999;}
