--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY.css
@@ -22,13 +22,23 @@
 /*首页_主体_上部*/
 .div_body .div_body_top{ width: 1200px;overflow-x: hidden;}
 .div_body .div_body_top .div_body_top_left{ width: 930px;height: 140px;margin-top: 10px;display: inline-block;float: left;background: #ffffff;padding: 10px 0px;}
-.div_body .div_body_top .div_body_top_right{ width: 260px;height: 140px;margin-top: 10px;margin-left: 10px;display: inline-block;float: left;background: #ffffff;}
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left{ width: 110px;float: left;}
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .p_body_top_left_dl:hover{ cursor: pointer;color: #ef6100;text-decoration: underline;}
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .i_body_top_left{ width: 44px;height: 44px;margin-left: 34px;text-align:center;display: block;background-size: 100%; }
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .p_body_top_left{display: block;text-align: center;}
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .span_body_top_left{font-size: 12px;color: #999;display: inline-block;text-align: center;}
 .div_body .div_body_top .div_body_top_left .ul_body_top_left .li_body_top_left .span_body_top_left_xl:hover{ cursor: pointer;color: #ef6100;text-decoration: underline;}
+
+.div_body .div_body_top .div_body_top_right{ width: 260px;height: 140px;margin-top: 10px;padding: 6px 6px;margin-left: 10px;display: inline-block;float: left;background: #ffffff;}
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb{ }
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .p_body_top_right_zxfb{ font-size: 16px;font-weight: 700;border-bottom: 1px solid #cccccc;display: block;height: 35px;}
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb{ padding: 0;height: 60px; }
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb{ width: 100%;display: block; display: none;}
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .img_body_top_right_zxfb{ width: 60px;height: 60px;display: inline-block;float: left; }
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb{ width: 180px;height: 60px;float: right;}
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb .span_body_top_right_zxfb{ font-size: 13px;display: block;}
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb .span_body_top_right_zxfb:hover{ color: #ef6100;text-decoration: underline;cursor: pointer;}
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb .span_body_top_right_zxfb_sj{ color: #999999;font-size: 12px;display: block;margin-top: 5px;}
 
 .div_bottom {border-top: 1px solid #cccccc;display: block;text-align: center;height: 100px;color: #333;padding-top: 15px;font-family: Microsoft YaHei, SimHei, Arial, Helvetica, sans-serif;margin-top: 20px;background-color: #000;opacity: 0.5;color: #fff;line-height: 34px;}
 
