--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -81,38 +81,129 @@
                         <p class="p_body_top_left">
                             <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_zp.png")" />
                         </p>
-                        <p class="p_body_top_left">招聘</p>
+                        <p class="p_body_top_left p_body_top_left_dl">招聘</p>
                         <p class="p_body_top_left">
-                            <span class="span_body_top_left">全职</span>
+                            <span class="span_body_top_left span_body_top_left_xl">全职</span>
                             <span class="span_body_top_left">/</span> 
-                            <span class="span_body_top_left">兼职</span>
+                            <span class="span_body_top_left span_body_top_left_xl">兼职</span>
                         </p>
                     </li>
                     <li class="li_body_top_left">
                         <p class="p_body_top_left">
                             <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_esc.png")"/>
                         </p>
-                        <p class="p_body_top_left">二手车</p>
+                        <p class="p_body_top_left p_body_top_left_dl">二手车</p>
                         <p class="p_body_top_left">
-                            <span class="span_body_top_left">家用</span>
+                            <span class="span_body_top_left span_body_top_left_xl">家用</span>
                             <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left">商用</span>
+                            <span class="span_body_top_left span_body_top_left_xl">商用</span>
                         </p>
                     </li>
                     <li class="li_body_top_left">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_fc.png")" />
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_fc.png")"/>
                         </p>
-                        <p class="p_body_top_left">房产</p>
+                        <p class="p_body_top_left p_body_top_left_dl">房产</p>
                         <p class="p_body_top_left">
-                            <span class="span_body_top_left">租房</span>
+                            <span class="span_body_top_left span_body_top_left_xl">租房</span>
                             <span class="span_body_top_left">/</span>
-                            <span class="span_body_top_left">买房</span>
+                            <span class="span_body_top_left span_body_top_left_xl">买房</span>
+                        </p>
+                    </li>
+                    <li class="li_body_top_left">
+                        <p class="p_body_top_left">
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_cw.png")"/>
+                        </p>
+                        <p class="p_body_top_left p_body_top_left_dl">宠物</p>
+                        <p class="p_body_top_left">
+                            <span class="span_body_top_left span_body_top_left_xl">狗</span>
+                            <span class="span_body_top_left">/</span>
+                            <span class="span_body_top_left span_body_top_left_xl">猫</span>
+                            <span class="span_body_top_left">/</span>
+                            <span class="span_body_top_left span_body_top_left_xl">鱼</span>
+                        </p>
+                    </li>
+                    <li class="li_body_top_left">
+                        <p class="p_body_top_left">
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_essc.png")"/>
+                        </p>
+                        <p class="p_body_top_left p_body_top_left_dl">二手市场</p>
+                        <p class="p_body_top_left">
+                            <span class="span_body_top_left span_body_top_left_xl">手机</span>
+                            <span class="span_body_top_left">/</span>
+                            <span class="span_body_top_left span_body_top_left_xl">家电</span>
+                            <span class="span_body_top_left">/</span>
+                            <span class="span_body_top_left span_body_top_left_xl">回收</span>
+                        </p>
+                    </li>
+                    <li class="li_body_top_left">
+                        <p class="p_body_top_left">
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_shfw.png")"/>
+                        </p>
+                        <p class="p_body_top_left p_body_top_left_dl">生活服务</p>
+                        <p class="p_body_top_left">
+                            <span class="span_body_top_left span_body_top_left_xl">搬家</span>
+                            <span class="span_body_top_left">/</span>
+                            <span class="span_body_top_left span_body_top_left_xl">保姆</span>
+                            <span class="span_body_top_left">/</span>
+                            <span class="span_body_top_left span_body_top_left_xl">家教</span>
+                        </p>
+                    </li>
+                    <li class="li_body_top_left">
+                        <p class="p_body_top_left">
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_swfw.png")" />
+                        </p>
+                        <p class="p_body_top_left p_body_top_left_dl">商务服务</p>
+                        <p class="p_body_top_left">
+                            <span class="span_body_top_left span_body_top_left_xl">工商</span>
+                            <span class="span_body_top_left">/</span>
+                            <span class="span_body_top_left span_body_top_left_xl">加盟</span>
+                            <span class="span_body_top_left">/</span>
+                            <span class="span_body_top_left span_body_top_left_xl">租赁</span>
+                        </p>
+                    </li> 
+                    <li class="li_body_top_left">
+                        <p class="p_body_top_left">
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_jypx.png")" />
+                        </p>
+                        <p class="p_body_top_left p_body_top_left_dl">教育培训</p>
+                        <p class="p_body_top_left">
+                            <span class="span_body_top_left span_body_top_left_xl">语言</span>
+                            <span class="span_body_top_left">/</span>
+                            <span class="span_body_top_left span_body_top_left_xl">艺术</span>
+                            <span class="span_body_top_left">/</span>
+                            <span class="span_body_top_left span_body_top_left_xl">技能</span>
                         </p>
                     </li>
                 </ul>
             </div>
             <div class="div_body_top_right">
+                <div class="div_body_top_right_zxfb">
+                    <p class="p_body_top_right_zxfb">最新发布</p>
+                    <ul class="ul_body_top_right_zxfb">
+                        <li id="li_body_top_right_zxfb_1" class="li_body_top_right_zxfb">
+                            <img class="img_body_top_right_zxfb" src="http://localhost/infotownlet/Areas/Business/Photos/2718ced3-996d-427d-925d-a08e127cc0b8/201710302144192769.jpg"/>
+                            <div class="div_body_top_right_zxfb">
+                                <span class="span_body_top_right_zxfb">六一北路 时代景城 两房 三房 出租 4000.6000</span>
+                                <span class="span_body_top_right_zxfb_sj">4分钟前</span>
+                            </div>
+                        </li>
+                        <li id="li_body_top_right_zxfb_2" class="li_body_top_right_zxfb">
+                            <img class="img_body_top_right_zxfb" src="http://localhost/infotownlet/Areas/Business/Photos/2718ced3-996d-427d-925d-a08e127cc0b8/201710302144192769.jpg" />
+                            <div class="div_body_top_right_zxfb">
+                                <span class="span_body_top_right_zxfb">432432432</span>
+                                <span class="span_body_top_right_zxfb_sj">2分钟前</span>
+                            </div>
+                        </li> 
+                        <li id="li_body_top_right_zxfb_3" class="li_body_top_right_zxfb">
+                            <img class="img_body_top_right_zxfb" src="http://localhost/infotownlet/Areas/Business/Photos/2718ced3-996d-427d-925d-a08e127cc0b8/201710302144192769.jpg"/>
+                            <div class="div_body_top_right_zxfb">
+                                <span class="span_body_top_right_zxfb">yvuj75jb67u76</span>
+                                <span class="span_body_top_right_zxfb_sj">3分钟前</span>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
 
             </div>
         </div>
