--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -180,29 +180,38 @@
             <div class="div_body_top_right">
                 <div class="div_body_top_right_zxfb">
                     <p class="p_body_top_right_zxfb">最新发布</p>
-                    <ul class="ul_body_top_right_zxfb">
-                        <li id="li_body_top_right_zxfb_1" class="li_body_top_right_zxfb">
-                            <img class="img_body_top_right_zxfb" src="http://localhost/infotownlet/Areas/Business/Photos/2718ced3-996d-427d-925d-a08e127cc0b8/201710302144192769.jpg"/>
-                            <div class="div_body_top_right_zxfb">
-                                <span class="span_body_top_right_zxfb">六一北路 时代景城 两房 三房 出租 4000.6000</span>
-                                <span class="span_body_top_right_zxfb_sj">4分钟前</span>
-                            </div>
-                        </li>
-                        <li id="li_body_top_right_zxfb_2" class="li_body_top_right_zxfb">
-                            <img class="img_body_top_right_zxfb" src="http://localhost/infotownlet/Areas/Business/Photos/2718ced3-996d-427d-925d-a08e127cc0b8/201710302144192769.jpg" />
-                            <div class="div_body_top_right_zxfb">
-                                <span class="span_body_top_right_zxfb">432432432</span>
-                                <span class="span_body_top_right_zxfb_sj">2分钟前</span>
-                            </div>
-                        </li> 
-                        <li id="li_body_top_right_zxfb_3" class="li_body_top_right_zxfb">
-                            <img class="img_body_top_right_zxfb" src="http://localhost/infotownlet/Areas/Business/Photos/2718ced3-996d-427d-925d-a08e127cc0b8/201710302144192769.jpg"/>
-                            <div class="div_body_top_right_zxfb">
-                                <span class="span_body_top_right_zxfb">yvuj75jb67u76</span>
-                                <span class="span_body_top_right_zxfb_sj">3分钟前</span>
-                            </div>
-                        </li>
-                    </ul>
+                    <div class="div_ul_body_top_right_zxfb">
+                        <ul id="ul_body_top_right_zxfb" class="ul_body_top_right_zxfb">
+                            <li id="li_body_top_right_zxfb_1" class="li_body_top_right_zxfb">
+                                <img class="img_body_top_right_zxfb" src="http://localhost/infotownlet/Areas/Business/Photos/2718ced3-996d-427d-925d-a08e127cc0b8/201710302144192769.jpg" />
+                                <div class="div_body_top_right_zxfb">
+                                    <span class="span_body_top_right_zxfb">六一北路 时代景城 两房 三房 出租 4000.6000</span>
+                                    <span class="span_body_top_right_zxfb_sj">4分钟前</span>
+                                </div>
+                            </li>
+                            <li id="li_body_top_right_zxfb_2" class="li_body_top_right_zxfb">
+                                <img class="img_body_top_right_zxfb" src="http://localhost/infotownlet/Areas/Business/Photos/2718ced3-996d-427d-925d-a08e127cc0b8/201710302144192769.jpg" />
+                                <div class="div_body_top_right_zxfb">
+                                    <span class="span_body_top_right_zxfb">432432432</span>
+                                    <span class="span_body_top_right_zxfb_sj">2分钟前</span>
+                                </div>
+                            </li>
+                            <li id="li_body_top_right_zxfb_3" class="li_body_top_right_zxfb">
+                                <img class="img_body_top_right_zxfb" src="http://localhost/infotownlet/Areas/Business/Photos/2718ced3-996d-427d-925d-a08e127cc0b8/201710302144192769.jpg"/>
+                                <div class="div_body_top_right_zxfb">
+                                    <span class="span_body_top_right_zxfb">yvuj75jb67u76</span>
+                                    <span class="span_body_top_right_zxfb_sj">3分钟前</span>
+                                </div>
+                            </li>
+                            <li id="li_body_top_right_zxfb_1" class="li_body_top_right_zxfb">
+                                <img class="img_body_top_right_zxfb" src="http://localhost/infotownlet/Areas/Business/Photos/2718ced3-996d-427d-925d-a08e127cc0b8/201710302144192769.jpg" />
+                                <div class="div_body_top_right_zxfb">
+                                    <span class="span_body_top_right_zxfb">六一北路 时代景城 两房 三房 出租 4000.6000</span>
+                                    <span class="span_body_top_right_zxfb_sj">4分钟前</span>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
 
             </div>
