--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/SY.css
@@ -32,8 +32,9 @@
 .div_body .div_body_top .div_body_top_right{ width: 260px;height: 140px;margin-top: 10px;padding: 6px 6px;margin-left: 10px;display: inline-block;float: left;background: #ffffff;}
 .div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb{ }
 .div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .p_body_top_right_zxfb{ font-size: 16px;font-weight: 700;border-bottom: 1px solid #cccccc;display: block;height: 35px;}
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb{ padding: 0;height: 60px; }
-.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb{ width: 100%;display: block; display: none;}
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .div_ul_body_top_right_zxfb{height: 60px;width: 248px;overflow: hidden;}
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb{ padding: 0;height: 180px;width: 248px;}
+.div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb{ width: 100%;display: block; }
 .div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .img_body_top_right_zxfb{ width: 60px;height: 60px;display: inline-block;float: left; }
 .div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb{ width: 180px;height: 60px;float: right;}
 .div_body .div_body_top .div_body_top_right .div_body_top_right_zxfb .ul_body_top_right_zxfb .li_body_top_right_zxfb .div_body_top_right_zxfb .span_body_top_right_zxfb{ font-size: 13px;display: block;}
