--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SY/SY.cshtml
@@ -84,13 +84,13 @@
                         <p class="p_body_top_left p_body_top_left_dl">招聘</p>
                         <p class="p_body_top_left">
                             <span class="span_body_top_left span_body_top_left_xl">全职</span>
-                            <span class="span_body_top_left">/</span> 
+                            <span class="span_body_top_left">/</span>
                             <span class="span_body_top_left span_body_top_left_xl">兼职</span>
                         </p>
                     </li>
                     <li class="li_body_top_left">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_esc.png")"/>
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_esc.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">二手车</p>
                         <p class="p_body_top_left">
@@ -101,7 +101,7 @@
                     </li>
                     <li class="li_body_top_left">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_fc.png")"/>
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_fc.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">房产</p>
                         <p class="p_body_top_left">
@@ -112,7 +112,7 @@
                     </li>
                     <li class="li_body_top_left">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_cw.png")"/>
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_cw.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">宠物</p>
                         <p class="p_body_top_left">
@@ -125,7 +125,7 @@
                     </li>
                     <li class="li_body_top_left">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_essc.png")"/>
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_essc.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">二手市场</p>
                         <p class="p_body_top_left">
@@ -138,7 +138,7 @@
                     </li>
                     <li class="li_body_top_left">
                         <p class="p_body_top_left">
-                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_shfw.png")"/>
+                            <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_shfw.png")" />
                         </p>
                         <p class="p_body_top_left p_body_top_left_dl">生活服务</p>
                         <p class="p_body_top_left">
@@ -161,7 +161,7 @@
                             <span class="span_body_top_left">/</span>
                             <span class="span_body_top_left span_body_top_left_xl">租赁</span>
                         </p>
-                    </li> 
+                    </li>
                     <li class="li_body_top_left">
                         <p class="p_body_top_left">
                             <img class="i_body_top_left" src="@Url.Content("~/Areas/Business/Css/images/body_top_jypx.png")" />
@@ -181,11 +181,64 @@
                 <div class="div_body_top_right_zxfb">
                     <p class="p_body_top_right_zxfb">最新发布</p>
                     <div class="div_ul_body_top_right_zxfb">
-                        <ul id="ul_body_top_right_zxfb" class="ul_body_top_right_zxfb">
-                        </ul>
+                        <ul id="ul_body_top_right_zxfb" class="ul_body_top_right_zxfb"></ul>
                     </div>
                 </div>
-
+            </div>
+        </div>
+        <div class="div_body_middle">
+            <div class="div_body_middle_left">
+                <div class="div_body_middle_left_section" style="height: 280px;">
+                    <p class="p_body_middle_left_title">房产</p>
+                    <p class="p_body_middle_left_title_small">房屋买卖</p>
+                    <ul class="ul_body_middle_left_section" style="height: 60px;">
+                        <li class="li_body_middle_left_section">求租求购</li>
+                        <li class="li_body_middle_left_section">日租短租</li>
+                        <li class="li_body_middle_left_section">找人合租</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">二手房</li>
+                        <li class="li_body_middle_left_section">新房出售</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">房屋出租</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">商业地产</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">商铺出租</li>
+                        <li class="li_body_middle_left_section">商铺出售</li>
+                        <li class="li_body_middle_left_section li_body_middle_left_section_active">商铺转让</li>
+                        <li class="li_body_middle_left_section">厂房仓库</li>
+                        <li class="li_body_middle_left_section">写字楼出租</li>
+                        <li class="li_body_middle_left_section">写字楼出售</li>
+                    </ul>
+                </div>
+                <div class="div_body_middle_left_section" style="height: 506px;">
+                    <p class="p_body_middle_left_title">车辆</p>
+                    <p class="p_body_middle_left_title_small">商用车</p>
+                    <ul class="ul_body_middle_left_section" style="height: 90px;">
+                        <li class="li_body_middle_left_section">货车</li>
+                        <li class="li_body_middle_left_section">工程车</li>
+                        <li class="li_body_middle_left_section">拖拉机</li>
+                        <li class="li_body_middle_left_section">自卸车</li>
+                        <li class="li_body_middle_left_section">挖掘机</li>
+                        <li class="li_body_middle_left_section">平板车</li>
+                        <li class="li_body_middle_left_section">厢式货车</li>
+                        <li class="li_body_middle_left_section">半挂车</li>
+                    </ul>
+                    <p class="p_body_middle_left_title_small">二手车</p>
+                    <ul class="ul_body_middle_left_section">
+                        <li class="li_body_middle_left_section">0-2万</li>
+                        <li class="li_body_middle_left_section">2-4万</li>
+                        <li class="li_body_middle_left_section">4-8万</li>
+                        <li class="li_body_middle_left_section">8万以上</li>
+                        <li class="li_body_middle_left_section">大众</li>
+                        <li class="li_body_middle_left_section">丰田</li>
+                        <li class="li_body_middle_left_section">本田</li>
+                        <li class="li_body_middle_left_section">宝马</li>
+                        <li class="li_body_middle_left_section">日产</li>
+                        <li class="li_body_middle_left_section">现代</li>
+                        <li class="li_body_middle_left_section">奥迪</li>
+                        <li class="li_body_middle_left_section">别克</li>
+                        <li class="li_body_middle_left_section">铃木</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
